--- a/api_call_test/index.html
+++ b/api_call_test/index.html
@@ -5,13 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="apicall.js"></script>
   <title>API Call Testing</title>
 </head>
+<header>
+  <h1>WORD SPRINT</h1>
+</header>
 
 <body>
-  <button id="button">Test API</button>
+
+  <div id="wrapper">
+    <div id="gameboard">
+      <div id="trackers">
+        <div id="score">
+          <h3>5</h3>
+          <p> score</p>
+        </div>
+        <div id="time">
+          <h3>45</h3>
+          <p> seconds</p>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+<footer></footer>
 
 </html>
