--- a/api_call_test/index.html
+++ b/api_call_test/index.html
@@ -29,8 +29,13 @@
           <p> seconds</p>
         </div>
       </div>
+      <div id="word">
+        <h4 id="w">W</h4>
+        <h4 id="w">o</h4>
+        <h4 id="w">r</h4>
+        <h4 id="w">d</h4>
+      </div>
     </div>
-  </div>
 </body>
 <footer></footer>
 
