--- a/api_call_test/index.html
+++ b/api_call_test/index.html
@@ -29,7 +29,10 @@
           <p> seconds</p>
         </div>
       </div>
+      <div id="startcontainer">
+      </div>
       <div id="word">
+        <button id="start">START GAME</button>
       </div>
     </div>
 </body>
