Added next word up feature per request

--- a/api_call_test/index.html
+++ b/api_call_test/index.html
@@ -29,10 +29,17 @@
           <p> seconds</p>
         </div>
       </div>
-      <div id="startcontainer">
-      </div>
       <div id="word">
+        <div id="word2">
+
+        </div>
         <button id="start">START GAME</button>
+        <div id="nextup">
+          <div id="nextup2">
+            <h3>Next Word:&nbsp</h3>
+            <h3 id="nextwordhere"></h3>
+          </div>
+        </div>
       </div>
     </div>
 </body>
