--- a/api_call_test/index.html
+++ b/api_call_test/index.html
@@ -29,15 +29,22 @@
           <p> seconds</p>
         </div>
       </div>
+      <div id="buttons">
+        <button id="start">START GAME</button>
+        <button id="start2">START MULTIPLIER GAME</button>
+      </div>
       <div id="word">
         <div id="word2">
 
         </div>
-        <button id="start">START GAME</button>
         <div id="nextup">
           <div id="nextup2">
             <h3>Next Word:&nbsp</h3>
             <h3 id="nextwordhere"></h3>
+          </div>
+          <div id="scoreMulti">
+            <h3>Score Multiplier:&nbsp</h3>
+            <h3 id="multiplierHere"></h3>
           </div>
         </div>
       </div>
