Changed multiplier game to streak game.

--- a/api_call_test/index.html
+++ b/api_call_test/index.html
@@ -31,7 +31,7 @@
       </div>
       <div id="buttons">
         <button id="start">START GAME</button>
-        <button id="start2">START MULTIPLIER GAME</button>
+        <button id="start2">START STREAK GAME</button>
       </div>
       <div id="word">
         <div id="word2">
