Minor change to title

--- a/api_call_test/index.html
+++ b/api_call_test/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="apicall.js"></script>
-  <title>API Call Testing</title>
+  <title>Word Sprint</title>
 </head>
 <header>
   <h1>WORD SPRINT</h1>
